services/whoami/k8s/resources/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  # type: ClusterIP
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
