services/whoami/k8s/resources/whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.server`)
      kind: Rule
      services:
        - name: whoami
          port: 80
